# ai-doc-analyzer

./: README.md  pyproject.toml  setup.py  test.txt
app/: __init__.py  main.py
app/models/: __init__.py  model_manager.py
app/utils/: __init__.py  document_analyzer.py
tests/: test_main.py  test_utils.py
